@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-30T16:08:34Z",
-  "count" : 2,
+  "timestamp" : "2023-08-13T08:08:24Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
