@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-13T00:36:28Z",
+  "timestamp" : "2023-08-13T08:08:24Z",
   "count_outdated" : 4885,
   "uniques_outdated" : 1444,
-  "count" : 5009,
-  "uniques" : 1529,
+  "count" : 5011,
+  "uniques" : 1531,
   "clones" : [
     {
       "timestamp": "2023-07-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -112,6 +112,15 @@
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2023-08-13T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
