@@ -1,10 +1,10 @@
 {
-  "count": 124,
-  "uniques": 68,
+  "count": 125,
+  "uniques": 69,
   "clones": [
     {
       "timestamp": "2023-07-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -61,6 +61,11 @@
       "timestamp": "2023-08-12T00:00:00Z",
       "count": 8,
       "uniques": 6
+    },
+    {
+      "timestamp": "2023-08-13T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
